# mshc

./: .gitignore  Cargo.toml  README.md
mshc/: Cargo.toml
mshc-core/: Cargo.toml
mshc-core/src/: named.rs
mshc-derive/: Cargo.toml
mshc-derive/src/: lib.rs
mshc-macro-shared/: Cargo.toml
mshc-macro-shared/src/: lib.rs  maybe_field.rs  req_field.rs
mshc/src/: lib.rs  named.rs
src/: lib.rs
src/debug/: string.rs
src/debug/string/: linebyline.rs
src/syn/: ident.rs
