[package]
name = "msuk-helper-collection"
version = "0.1.2"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Various utilitiarian helpers for debugging etc."
readme = "README.md"
repository = "https://github.com/msukanen/msuk-helper-collection.git"

[dependencies]
log = { version = "0.4.30", optional = true }
env_logger = { version = "0.11.10", optional = true }
syn = { version = "2", optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }

[features]
default = []
full = ["debug-out-lbl", "syn"]
logging = ["dep:log", "dep:env_logger"]
debug-out-lbl = ["logging"]
syn = ["dep:syn", "dep:quote", "dep:log", "dep:env_logger", "proc-macro2"]

[badges]
maintenance = { status = "experimental" }
