[package]
name = "mshc"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tiny utility library…"

[dependencies]
mshc-derive = { path = "../mshc-derive", optional = true, version = "0.1.0" }

[features]
derive = ["dep:mshc-derive"]
