[package]
name = "mshc"
version = "0.1.2-d"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tiny utility library…"

[dependencies]
mshc-derive = { path = "../mshc-derive", optional = true, version = "0.1.0" }
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = "2.0.118"

[features]
derive = ["dep:mshc-derive"]

[badges]
maintenance = { status = "experimental" }
